--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 document.getElementById('admin-view').style.display = 'block';
             } else {
                 const code = prompt("CODE ACCÈS ADMIN :");
-                if (code === "2908") {
+                if (code === "Zendor22.") {
                     localStorage.setItem('uberjnr_admin_session', 'true');
                     document.getElementById('admin-view').style.display = 'block';
                 }
@@ -658,3 +658,4 @@
     </script>
 </body>
 </html>
+
